--- a/config/train_speech.yaml
+++ b/config/train_speech.yaml
@@ -15,21 +15,11 @@ defaults:
 # root directory with subfolders containing the canonical dataset(s)
 data_folder: ${oc.env:DATA_FOLDER}
 
-# directory for temporary storage
-temp_folder: ${oc.env:TEMP_FOLDER}
-
 # directory for slurm and hydra logs
 log_folder: ${oc.env:LOG_FOLDER}
 
 # random seed used by the experiment
 seed: 42133724
-
-# whether to do an LR range test with the model
-run_lr_range_test: False
-lr_range_iterations: 1000
-
-# verify model (run e.g summary and BatchGradientVerification)
-verify_model: false
 
 # whether to fit model
 fit_model: True
@@ -57,19 +47,12 @@ experiment_name: ${random_name:}
 # of certain experiment
 tag: ${now:%Y-%m-%d}
 
-# whether to disable all functionality which can leak
-# identity
-anonymous_mode: true
-
-# set test embedding sequence and letter predictions to disk
-save_test_output_to_disk: False
-
 # config variables for hydra
 hydra:
   run:
     # set root output directory
-    dir: ${log_folder}/w2v2-mt/run/${now:%Y-%m-%d_%H-%M-%S}/${experiment_name}
+    dir: ${log_folder}/disjoint-mtl/run/${now:%Y-%m-%d_%H-%M-%S}/${experiment_name}
   sweep:
     # set root output directory
-    dir: ${log_folder}/w2v2-mt/sweep/${now:%Y-%m-%d_%H-%M-%S}
+    dir: ${log_folder}/disjoint-mtl/sweep/${now:%Y-%m-%d_%H-%M-%S}
     subdir: ${experiment_name}
