--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,13 @@ black = { extras = ["d"], version = "^22.8.0" }
 psutil = "^5.9.2"
 "hurry.filesize" = "^0.9"
 torch = "^1.12.1"
-data-utility = { path = "../data_utility" }
+data_utility = { path = "../data_utility", develop = true }
 pytorch-lightning = "^1.7.6"
 wandb = "^0.13.3"
 transformers = "^4.22.1"
 omegaconf = "^2.2.3"
 hydra-core = "^1.2.0"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
 
