--- a/config/trainer/trainer_gpu.yaml
+++ b/config/trainer/trainer_gpu.yaml
@@ -64,3 +64,6 @@ auto_lr_find: False
 # apply clipping to the global gradient norm to avoid exploding
 # gradients. Default value of '0' means no clipping is applied
 gradient_clip_val: 0
+
+# location of loging:
+default_root_dir: ${log_folder}
