--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Nik Vaessen <git@mail.vaessen.tech>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.12"
 black = { extras = ["d"], version = "^22.8.0" }
 psutil = "^5.9.2"
 "hurry.filesize" = "^0.9"
@@ -17,6 +17,8 @@ transformers = "^4.22.1"
 omegaconf = "^2.2.3"
 hydra-core = "^1.2.0"
 python-dotenv = "^0.21.0"
+scipy = "^1.9.1"
+scikit-learn = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 
