--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ hydra-core = "^1.2.0"
 python-dotenv = "^0.21.0"
 scipy = "^1.9.1"
 scikit-learn = "^1.1.2"
+hydra-submitit-launcher = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
