--- a/config/network/speaker_wav2vec2_linear.yaml
+++ b/config/network/speaker_wav2vec2_linear.yaml
@@ -7,8 +7,16 @@ reset_weights: false
 # freeze logic
 freeze_cnn: true
 freeze_transformer: true  # this also freezes projector and rel. pos. emb
-num_steps_freeze_cnn: null # so always
+num_steps_freeze_cnn: -1 # so always
 num_steps_freeze_transformer: 10_000
 
 # if enabled, gradient checkpointing slows down iteration speed but saves memory
 use_gradient_checkpointing: true
+
+# head on top of wav2vec2 for speaker recognition
+head_cfg:
+  _target_: src.networks.heads.LinearHeadConfig
+  projection_layer_dim: 128
+  drop_prob: 0.05
+  use_cosine_linear: false
+
