--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^0.21.0"
 scipy = "^1.9.1"
 scikit-learn = "^1.1.2"
 hydra-submitit-launcher = "^1.2.0"
+speechbrain = "^0.5.13"
 
 [tool.poetry.dev-dependencies]
 
