--- a/config/data/module/librispeech_speech.yaml
+++ b/config/data/module/librispeech_speech.yaml
@@ -5,14 +5,19 @@ train_c100_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/train-clean-100
 train_c360_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/train-clean-360
 train_o500_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/train-other-500
 
-train_disjoint_set1_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/train-disjoint-1
-train_disjoint_set2_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/train-disjoint-2
+val_c100_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/val-clean-100
+val_c360_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/val-clean-360
+val_o500_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/val-other-500
 
-val_clean_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/dev-clean
-val_other_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/dev-other
+dev_clean_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/dev-clean
+dev_other_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/dev-other
 
 test_clean_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/test-clean
 test_other_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/test-other
+
+# different train/val set
+train_disjoint_set1_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/train-disjoint-1
+train_disjoint_set2_shard_path: ${oc.env:LIBRISPEECH_DIR}/shards/train-disjoint-2
 
 # shard pattern
 shard_file_pattern: "*.*.tar*"
