--- a/config/data/speech_datapipe/default_datapipe.yaml
+++ b/config/data/speech_datapipe/default_datapipe.yaml
@@ -9,6 +9,7 @@ train_dp:
 
   # batching
   max_tokens: 2_800_000
+  max_len: 320_000
 
   # logic for giving each worker equal number of data
   allow_partial_shards: true
@@ -24,7 +25,8 @@ val_dp:
   shuffle_buffer: 256
 
   # batching
-  max_tokens: 2_800_000
+  batch_size: 8
+  drop_last: false
 
   # logic for giving each worker equal number of data
   allow_partial_shards: true
@@ -41,9 +43,9 @@ test_dp:
 
   # batching
   batch_size: 1
+  drop_last: false
 
   # logic for giving each worker equal number of data
   allow_partial_shards: true
   num_workers: 1
-  drop_last: false
 
