--- a/config/network/speaker_wav2vec2_linear.yaml
+++ b/config/network/speaker_wav2vec2_linear.yaml
@@ -15,7 +15,7 @@ use_gradient_checkpointing: true
 
 # head on top of wav2vec2 for speaker recognition
 head_cfg:
-  _target_: src.networks.heads.LinearHeadConfig
+  _target_: src.networks.heads.LinearProjectionHeadConfig
   projection_layer_dim: 128
   drop_prob: 0.05
   use_cosine_linear: false
