--- a/config/train_speech.yaml
+++ b/config/train_speech.yaml
@@ -4,7 +4,7 @@ defaults:
   - data/module: librispeech_speech
   - data/speaker_datapipe: default_datapipe
   - data/speech_datapipe: default_datapipe
-  - network: speech_wav2vec2_fc
+  - network: speech_wav2vec2_linear
   - optim/algo: adam
   - optim/schedule: tri_stage
   - optim/loss: ctc
