--- a/config/callbacks/speaker_early_stopping.yaml
+++ b/config/callbacks/speaker_early_stopping.yaml
@@ -27,7 +27,7 @@ ram_monitor:
 # save model checkpoint of weights with best validation performance
 checkpoint:
   _target_: pytorch_lightning.callbacks.model_checkpoint.ModelCheckpoint
-  monitor: val_eer
+  monitor: val_loss
   save_top_k: 1
   mode: min
   filename: 'epoch_{epoch:04d}.step_{step:09d}.val-eer_{val_eer:.4f}.best'
@@ -42,7 +42,7 @@ last_checkpoint_pattern: 'epoch_{epoch:04d}.step_{step:09d}.val-eer_{val_eer:.4f
 # stop when val_eer doesn't improve or diverges
 early_stopping:
   _target_: pytorch_lightning.callbacks.early_stopping.EarlyStopping
-  monitor: val_eer
+  monitor: val_loss
   min_delta: 0.00
   patience: 4
   mode: min
