--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ scipy = "^1.9.1"
 scikit-learn = "^1.1.2"
 hydra-submitit-launcher = "^1.2.0"
 speechbrain = "^0.5.13"
+pyarrow = "6.0.1"
 
 [tool.poetry.dev-dependencies]
 
