--- a/config/callbacks/speech_early_stopping.yaml
+++ b/config/callbacks/speech_early_stopping.yaml
@@ -40,7 +40,7 @@ checkpoint:
 
 last_checkpoint_pattern: 'epoch_{epoch:04d}.step_{step:09d}.val-wer_{val_wer_clean:.4f}.last'
 
-# stop when val_wer_other doesn't improve
+# stop when val_wer doesn't improve
 early_stopping_plateau:
   _target_: pytorch_lightning.callbacks.early_stopping.EarlyStopping
   monitor: val_wer
@@ -48,13 +48,3 @@ early_stopping_plateau:
   patience: 4
   mode: min
   check_finite: True
-
-# stop when model doesn't improve or diverges
-early_stopping_diverge:
-  _target_: pytorch_lightning.callbacks.early_stopping.EarlyStopping
-  monitor: val_loss
-  min_delta: 0.00
-  patience: 1_000_000 # disable monitoring val_loss_other for anything but divergence
-  mode: min
-  check_finite: True
-  divergence_threshold: 10
