wrong loss woops

--- a/config/experiments/speaker_aam_4cycle_nofreeze_ch1s_bs64.yaml
+++ b/config/experiments/speaker_aam_4cycle_nofreeze_ch1s_bs64.yaml
@@ -8,7 +8,7 @@ defaults:
   - override /network: speech_wav2vec2_linear
   - override /optim/algo: adam
   - override /optim/schedule: 4cycle
-  - override /optim/loss: ctc
+  - override /optim/loss: aam_softmax
   - override /trainer: trainer_gpu
 
 trainer:
