--- a/config/experiments/speaker_aam_4cycle_nofreeze_ch1s_bs64.yaml
+++ b/config/experiments/speaker_aam_4cycle_nofreeze_ch1s_bs64.yaml
@@ -2,9 +2,8 @@
 
 defaults:
   - override /callbacks: speaker_default
-  - override /data/module: voxceleb
+  - override /data/module: speaker_voxceleb
   - override /data/speaker_datapipe: default_datapipe
-  - override /data/speech_datapipe: default_datapipe
   - override /network: speaker_wav2vec2_linear
   - override /optim/algo: adam
   - override /optim/schedule: 4cycle
