drop last to prevent OOM?

--- a/config/data/speaker_datapipe/default_datapipe.yaml
+++ b/config/data/speaker_datapipe/default_datapipe.yaml
@@ -17,7 +17,7 @@ train_dp:
   # logic for giving each worker equal number of data
   allow_partial_shards: true
   num_workers: 5
-  drop_last: false
+  drop_last: true
 
 
 val_dp:
