--- a/config/data/module/speech_librispeech_other.yaml
+++ b/config/data/module/speech_librispeech_other.yaml
@@ -1,5 +1,8 @@
 _target_: src.data.module.SpeechRecognitionDataModuleConfig
 
+# name of dataset
+name: ls_other
+
 # path to folder(s) containing train data
 train_shard_paths:
   - ${oc.env:LIBRISPEECH_DIR}/shards/train-other-500
