--- a/config/train_speech.yaml
+++ b/config/train_speech.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - callbacks: speaker_default
   - data/module: speech_librispeech_960h.yaml
-  - data/speech_datapipe: default_datapipe
+  - data/pipe: speech_datapipe
   - network: speech_wav2vec2_linear
   - optim/algo: adam
   - optim/schedule: tri_stage
