--- a/config/network/speaker_wav2vec2_linear.yaml
+++ b/config/network/speaker_wav2vec2_linear.yaml
@@ -20,3 +20,6 @@ head_cfg:
   drop_prob: 0.05
   use_cosine_linear: false
 
+  enable_train_chunk: false
+  train_random_chunk_size: 40 # ~25 ms per frame. 40==1 second chunk size
+
