--- a/config/experiments/speaker_aam_4cycle_nofreeze_ch3s_bs64.yaml
+++ b/config/experiments/speaker_aam_4cycle_nofreeze_ch3s_bs64.yaml
@@ -3,7 +3,7 @@
 defaults:
   - override /callbacks: speaker_default
   - override /data/module: speaker_voxceleb
-  - override /data/speaker_datapipe: default_datapipe
+  - override /data/pipe: speaker_datapipe
   - override /network: speaker_wav2vec2_linear
   - override /optim/algo: adam
   - override /optim/schedule: tri_stage
