--- a/config/network/speaker_wav2vec2_xvector.yaml
+++ b/config/network/speaker_wav2vec2_xvector.yaml
@@ -15,12 +15,15 @@ use_gradient_checkpointing: true
 
 # head on top of wav2vec2 for speaker recognition
 head_cfg:
-  _target_: src.networks.heads.LinearProjectionHeadConfig
-  use_projection_layer: true
-  projection_layer_dim: 128
-  drop_prob: 0.05
-  use_cosine_linear: false
+  _target_: src.networks.heads.XvectorHeadConfig
 
-  enable_train_chunk: false
-  train_random_chunk_size: 40 # ~25 ms per frame. 40==1 second chunk size
+  classifier_cfg:
+    _target_: src.networks.heads.LinearProjectionHeadConfig
+    use_projection_layer: true
+    projection_layer_dim: 128
+    drop_prob: 0.05
+    use_cosine_linear: false
+
+    enable_train_chunk: false
+    train_random_chunk_size: 40 # ~25 ms per frame. 40==1 second chunk size
 
