--- a/fashion_and_mnist/config/main.yaml
+++ b/fashion_and_mnist/config/main.yaml
@@ -26,6 +26,9 @@ initial_prune_factor: null
 # save initial model
 save_initial_model: false
 
+# seed from which model weights are generated
+model_seed: null
+
 # experiment name
 # (:) indicates it needs to be resolved
 experiment_name: ${random_name:}
