add switchboard tests

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ LIBRISPEECH_DIR=$PWD/data/librispeech
 # directory containing the VoxCeleb dataset
 VOXCELEB_DIR=$PWD/data/voxceleb
 
+# directory containing the switchboard dataset
+SWITCHBOARD_DIR=$PWD/data/switchboard
+
 # folder where results will be logged to
 LOG_FOLDER=$PWD/data/logs/disjoint_mtl
 
