--- a/config/network/mtl_wav2vec2_linear.yaml
+++ b/config/network/mtl_wav2vec2_linear.yaml
@@ -21,7 +21,7 @@ speaker_head_cfg:
   drop_prob: 0.05
   use_cosine_linear: false
 
-  enable_train_chunk: true
+  enable_train_chunk: false
   train_random_chunk_size: 40 # ~25 ms per frame. 40==1 second chunk size
 
 speech_head_cfg:
